--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     info@devstudio.com
                     </a>
                 </li>
-                <li class="contacts-list-item"><a href="tel:+380961111111" class="contacts-link tel">
-                        <svg class="contacts-icon" width="16" height="12">
+                <li class="contacts-list-item" aria-label="Позвонить по телефону"><a href="tel:+380961111111" class="contacts-link tel">
+                        <svg class="contacts-icon" width="10" height="16">
                             <use href="./images/icons.svg#icon-smartphone">
                             </use>
                         </svg>
