Добавляет иконки соц. сетей в секции "Наша команда"

--- a/index.html
+++ b/index.html
@@ -120,12 +120,72 @@
                                 <h3 class="team-list-title">Игорь Демьяненко</h3>
                                 <p class="team-list-description">Product Designer</p>
                             </div>
+                            <div class="team-thumb">
+                                <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram">
+                                    <svg class="social-link-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-instagram">
+                                        </use>
+                                    </svg>
+                                <!-- Instagram -->
+                                </a>
+                                <a href="https://www.twitter.com/" class="social-link" aria-label="Twitter">
+                                    <svg class="social-link-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-twitter">
+                                        </use>
+                                    </svg>
+                                    <!-- Twitter -->
+                                </a>
+                                <a href="https://www.facebook.com/" class="social-link" aria-label="Facebook">
+                                    <svg class="social-link-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-facebook">
+                                        </use>
+                                    </svg>
+                                    <!-- Facebook -->
+                                </a>
+                                <a href="https://www.linkedin.com/" class="social-link" aria-label="Linkedin">
+                                    <svg class="social-link-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-linkedin">
+                                        </use>
+                                    </svg>
+                                    <!-- Linkedin -->
+                                </a>
+                            </div>
                         </li>
                         <li class="team-list-item">
                             <img src="./images/img5.jpg" alt="Ольга Репина" width="270">
                             <div class="card-container">
                                 <h3 class="team-list-title">Ольга Репина</h3>
                                 <p class="team-list-description">Frontend Developer</p>
+                            </div>
+                            <div class="team-thumb">
+                                <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram">
+                                    <svg class="social-link-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-instagram">
+                                        </use>
+                                    </svg>
+                                    <!-- Instagram -->
+                                </a>
+                                <a href="https://www.twitter.com/" class="social-link" aria-label="Twitter">
+                                    <svg class="social-link-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-twitter">
+                                        </use>
+                                    </svg>
+                                    <!-- Twitter -->
+                                </a>
+                                <a href="https://www.facebook.com/" class="social-link" aria-label="Facebook">
+                                    <svg class="social-link-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-facebook">
+                                        </use>
+                                    </svg>
+                                    <!-- Facebook -->
+                                </a>
+                                <a href="https://www.linkedin.com/" class="social-link" aria-label="Linkedin">
+                                    <svg class="social-link-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-linkedin">
+                                        </use>
+                                    </svg>
+                                    <!-- Linkedin -->
+                                </a>
                             </div>
                         </li>
                         <li class="team-list-item">
@@ -134,12 +194,72 @@
                                 <h3 class="team-list-title">Николай Тарасов</h3>
                                 <p class="team-list-description">Marketing</p>
                             </div>
+                            <div class="team-thumb">
+                                <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram">
+                                    <svg class="social-link-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-instagram">
+                                        </use>
+                                    </svg>
+                                    <!-- Instagram -->
+                                </a>
+                                <a href="https://www.twitter.com/" class="social-link" aria-label="Twitter">
+                                    <svg class="social-link-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-twitter">
+                                        </use>
+                                    </svg>
+                                    <!-- Twitter -->
+                                </a>
+                                <a href="https://www.facebook.com/" class="social-link" aria-label="Facebook">
+                                    <svg class="social-link-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-facebook">
+                                        </use>
+                                    </svg>
+                                    <!-- Facebook -->
+                                </a>
+                                <a href="https://www.linkedin.com/" class="social-link" aria-label="Linkedin">
+                                    <svg class="social-link-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-linkedin">
+                                        </use>
+                                    </svg>
+                                    <!-- Linkedin -->
+                                </a>
+                            </div>
                         </li>
                         <li class="team-list-item">
                             <img src="./images/img7.jpg" alt="Михаил Ермаков" width="270">
                             <div class="card-container">
                                 <h3 class="team-list-title">Михаил Ермаков</h3>
                                 <p class="team-list-description">UI Designer</p>
+                            </div>
+                            <div class="team-thumb">
+                                <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram">
+                                    <svg class="social-link-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-instagram">
+                                        </use>
+                                    </svg>
+                                    <!-- Instagram -->
+                                </a>
+                                <a href="https://www.twitter.com/" class="social-link" aria-label="Twitter">
+                                    <svg class="social-link-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-twitter">
+                                        </use>
+                                    </svg>
+                                    <!-- Twitter -->
+                                </a>
+                                <a href="https://www.facebook.com/" class="social-link" aria-label="Facebook">
+                                    <svg class="social-link-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-facebook">
+                                        </use>
+                                    </svg>
+                                    <!-- Facebook -->
+                                </a>
+                                <a href="https://www.linkedin.com/" class="social-link" aria-label="Linkedin">
+                                    <svg class="social-link-icon" width="20" height="20">
+                                        <use href="./images/icons.svg#icon-linkedin">
+                                        </use>
+                                    </svg>
+                                    <!-- Linkedin -->
+                                </a>
                             </div>
                         </li>
                     </ul>
