--- a/index.html
+++ b/index.html
@@ -266,6 +266,62 @@
             </div>
 
         </section>
+        <!-- Разметка секции "Постоянные клиенты" -->
+        <section class="section section-clients">
+            <div class="container">
+                <h2 class="clients-title">Постоянные клиенты</h2>
+                <ul class="clients-list">
+                    <li class="clients-list-item"><a href="" class="clients-link">
+                        <svg class="clients-icon" width="106" height="60">
+                            <use href="./images/icons.svg#icon-group1">
+                            </use>
+                        </svg>
+                        <!-- Сlient 1 -->
+                    </a>
+                    </li>
+                    <li class="clients-list-item"><a href="" class="clients-link">
+                            <svg class="clients-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-group2">
+                                </use>
+                            </svg>
+                            <!-- Сlient 2 -->
+                        </a>
+                    </li>
+                    <li class="clients-list-item"><a href="" class="clients-link">
+                            <svg class="clients-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-group3">
+                                </use>
+                            </svg>
+                            <!-- Сlient 3 -->
+                        </a>
+                    </li>
+                    <li class="clients-list-item"><a href="" class="clients-link">
+                            <svg class="clients-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-group4">
+                                </use>
+                            </svg>
+                            <!-- Сlient 4 -->
+                        </a>
+                    </li>
+                    <li class="clients-list-item"><a href="" class="clients-link">
+                            <svg class="clients-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-group5">
+                                </use>
+                            </svg>
+                            <!-- Сlient 5 -->
+                        </a>
+                    </li>
+                    <li class="clients-list-item"><a href="" class="clients-link">
+                            <svg class="clients-icon" width="106" height="60">
+                                <use href="./images/icons.svg#icon-group6">
+                                </use>
+                            </svg>
+                            <!-- Сlient 6 -->
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <!-- Разметка Footer -->
     <footer class="section-footer">
