--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <!-- Разметка Header -->
-    <header class="section-header">
+    <header class="header">
       <div class="container  container-flex">
         <a href="./index.html" class="company-name"><span class="company-name-accent">Web</span>Studio</a>
         <nav class="site-nav">
@@ -23,9 +23,24 @@
           </ul>
         </nav>
         <ul class="contacts-list">
-          <li class="contacts-list-item"><a href="mailto:info@devstudio.com"
-              class="contacts-link mail">info@devstudio.com</a></li>
-          <li class="contacts-list-item"><a href="tel:+380961111111" class="contacts-link tel">+38 096 111 11 11</a></li>
+          <li class="contacts-list-item" aria-label="Написать на почту">
+            <a href="mailto:info@devstudio.com" class="contacts-link mail">
+              <svg class="contacts-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope">
+                </use>
+              </svg>
+              info@devstudio.com
+            </a>
+          </li>
+          <li class="contacts-list-item" aria-label="Позвонить по телефону"><a href="tel:+380961111111"
+              class="contacts-link tel">
+              <svg class="contacts-icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone">
+                </use>
+              </svg>
+              +38 096 111 11 11
+            </a>
+          </li>
         </ul>
       </div>
     </header>
