--- a/portfolio.html
+++ b/portfolio.html
@@ -136,17 +136,60 @@
       </section>
     </main>
     <!-- Разметка Footer -->
-<footer class="section-footer">
-  <div class="container container-footer">
-    <a href="./index.html" class="footer-company-name"><span class="company-name-accent">Web</span>Studio</a>
-    <address class="company-adress">
-      <ul>
-        <li>г. Киев, пр-т Леси Украинки, 26</li>
-        <li><a href="mailto:info@devstudio.com" class="company-link mail">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="company-link tel">+38 096 111 11 11</a></li>
-      </ul>
-    </address>
-  </div>
-</footer>
+    <footer class="section-footer">
+      <div class="container container-footer">
+        <div class="container-footer-adress">
+          <a href="./index.html" class="footer-company-name"><span class="company-name-accent">Web</span>Studio</a>
+          <address class="company-adress">
+            <ul>
+              <li>г. Киев, пр-т Леси Украинки, 26</li>
+              <li><a href="mailto:info@devstudio.com" class="company-link mail">info@devstudio.com</a></li>
+              <li><a href="tel:+380961111111" class="company-link tel">+38 096 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social-thumb">
+          <h3 class="social-title">Присоединяйтесь</h3>
+          <ul class="social-list">
+            <li class="social-list-item">
+              <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram">
+                <svg class="social-link-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram">
+                  </use>
+                </svg>
+                <!-- Instagram -->
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="https://www.twitter.com/" class="social-link" aria-label="Twitter">
+                <svg class="social-link-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter">
+                  </use>
+                </svg>
+                <!-- Twitter -->
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="https://www.facebook.com/" class="social-link" aria-label="Facebook">
+                <svg class="social-link-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook">
+                  </use>
+                </svg>
+                <!-- Facebook -->
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="https://www.linkedin.com/" class="social-link" aria-label="Linkedin">
+                <svg class="social-link-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin">
+                  </use>
+                </svg>
+                <!-- Linkedin -->
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
