Добавляет исправления в секцию "Наша команда"

--- a/index.html
+++ b/index.html
@@ -119,36 +119,44 @@
                             <div class="card-container">
                                 <h3 class="team-list-title">Игорь Демьяненко</h3>
                                 <p class="team-list-description">Product Designer</p>
-                            </div>
-                            <div class="team-thumb">
-                                <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram">
-                                    <svg class="social-link-icon" width="20" height="20">
-                                        <use href="./images/icons.svg#icon-instagram">
-                                        </use>
-                                    </svg>
-                                <!-- Instagram -->
-                                </a>
-                                <a href="https://www.twitter.com/" class="social-link" aria-label="Twitter">
-                                    <svg class="social-link-icon" width="20" height="20">
-                                        <use href="./images/icons.svg#icon-twitter">
-                                        </use>
-                                    </svg>
-                                    <!-- Twitter -->
-                                </a>
-                                <a href="https://www.facebook.com/" class="social-link" aria-label="Facebook">
-                                    <svg class="social-link-icon" width="20" height="20">
-                                        <use href="./images/icons.svg#icon-facebook">
-                                        </use>
-                                    </svg>
-                                    <!-- Facebook -->
-                                </a>
-                                <a href="https://www.linkedin.com/" class="social-link" aria-label="Linkedin">
-                                    <svg class="social-link-icon" width="20" height="20">
-                                        <use href="./images/icons.svg#icon-linkedin">
-                                        </use>
-                                    </svg>
-                                    <!-- Linkedin -->
-                                </a>
+                                <ul class="team-social-list">
+                                    <li>
+                                        <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram">
+                                            <svg class="social-link-icon" width="20" height="20">
+                                                <use href="./images/icons.svg#icon-instagram">
+                                                </use>
+                                            </svg>
+                                            <!-- Instagram -->
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.twitter.com/" class="social-link" aria-label="Twitter">
+                                            <svg class="social-link-icon" width="20" height="20">
+                                                <use href="./images/icons.svg#icon-twitter">
+                                                </use>
+                                            </svg>
+                                            <!-- Twitter -->
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.facebook.com/" class="social-link" aria-label="Facebook">
+                                            <svg class="social-link-icon" width="20" height="20">
+                                                <use href="./images/icons.svg#icon-facebook">
+                                                </use>
+                                            </svg>
+                                            <!-- Facebook -->
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.linkedin.com/" class="social-link" aria-label="Linkedin">
+                                            <svg class="social-link-icon" width="20" height="20">
+                                                <use href="./images/icons.svg#icon-linkedin">
+                                                </use>
+                                            </svg>
+                                            <!-- Linkedin -->
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                         <li class="team-list-item">
@@ -156,36 +164,44 @@
                             <div class="card-container">
                                 <h3 class="team-list-title">Ольга Репина</h3>
                                 <p class="team-list-description">Frontend Developer</p>
-                            </div>
-                            <div class="team-thumb">
-                                <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram">
-                                    <svg class="social-link-icon" width="20" height="20">
-                                        <use href="./images/icons.svg#icon-instagram">
-                                        </use>
-                                    </svg>
-                                    <!-- Instagram -->
-                                </a>
-                                <a href="https://www.twitter.com/" class="social-link" aria-label="Twitter">
-                                    <svg class="social-link-icon" width="20" height="20">
-                                        <use href="./images/icons.svg#icon-twitter">
-                                        </use>
-                                    </svg>
-                                    <!-- Twitter -->
-                                </a>
-                                <a href="https://www.facebook.com/" class="social-link" aria-label="Facebook">
-                                    <svg class="social-link-icon" width="20" height="20">
-                                        <use href="./images/icons.svg#icon-facebook">
-                                        </use>
-                                    </svg>
-                                    <!-- Facebook -->
-                                </a>
-                                <a href="https://www.linkedin.com/" class="social-link" aria-label="Linkedin">
-                                    <svg class="social-link-icon" width="20" height="20">
-                                        <use href="./images/icons.svg#icon-linkedin">
-                                        </use>
-                                    </svg>
-                                    <!-- Linkedin -->
-                                </a>
+                                <ul class="team-social-list">
+                                    <li>
+                                        <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram">
+                                            <svg class="social-link-icon" width="20" height="20">
+                                                <use href="./images/icons.svg#icon-instagram">
+                                                </use>
+                                            </svg>
+                                            <!-- Instagram -->
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.twitter.com/" class="social-link" aria-label="Twitter">
+                                            <svg class="social-link-icon" width="20" height="20">
+                                                <use href="./images/icons.svg#icon-twitter">
+                                                </use>
+                                            </svg>
+                                            <!-- Twitter -->
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.facebook.com/" class="social-link" aria-label="Facebook">
+                                            <svg class="social-link-icon" width="20" height="20">
+                                                <use href="./images/icons.svg#icon-facebook">
+                                                </use>
+                                            </svg>
+                                            <!-- Facebook -->
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.linkedin.com/" class="social-link" aria-label="Linkedin">
+                                            <svg class="social-link-icon" width="20" height="20">
+                                                <use href="./images/icons.svg#icon-linkedin">
+                                                </use>
+                                            </svg>
+                                            <!-- Linkedin -->
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                         <li class="team-list-item">
@@ -193,36 +209,44 @@
                             <div class="card-container">
                                 <h3 class="team-list-title">Николай Тарасов</h3>
                                 <p class="team-list-description">Marketing</p>
-                            </div>
-                            <div class="team-thumb">
-                                <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram">
-                                    <svg class="social-link-icon" width="20" height="20">
-                                        <use href="./images/icons.svg#icon-instagram">
-                                        </use>
-                                    </svg>
-                                    <!-- Instagram -->
-                                </a>
-                                <a href="https://www.twitter.com/" class="social-link" aria-label="Twitter">
-                                    <svg class="social-link-icon" width="20" height="20">
-                                        <use href="./images/icons.svg#icon-twitter">
-                                        </use>
-                                    </svg>
-                                    <!-- Twitter -->
-                                </a>
-                                <a href="https://www.facebook.com/" class="social-link" aria-label="Facebook">
-                                    <svg class="social-link-icon" width="20" height="20">
-                                        <use href="./images/icons.svg#icon-facebook">
-                                        </use>
-                                    </svg>
-                                    <!-- Facebook -->
-                                </a>
-                                <a href="https://www.linkedin.com/" class="social-link" aria-label="Linkedin">
-                                    <svg class="social-link-icon" width="20" height="20">
-                                        <use href="./images/icons.svg#icon-linkedin">
-                                        </use>
-                                    </svg>
-                                    <!-- Linkedin -->
-                                </a>
+                                <ul class="team-social-list">
+                                    <li>
+                                        <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram">
+                                            <svg class="social-link-icon" width="20" height="20">
+                                                <use href="./images/icons.svg#icon-instagram">
+                                                </use>
+                                            </svg>
+                                            <!-- Instagram -->
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.twitter.com/" class="social-link" aria-label="Twitter">
+                                            <svg class="social-link-icon" width="20" height="20">
+                                                <use href="./images/icons.svg#icon-twitter">
+                                                </use>
+                                            </svg>
+                                            <!-- Twitter -->
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.facebook.com/" class="social-link" aria-label="Facebook">
+                                            <svg class="social-link-icon" width="20" height="20">
+                                                <use href="./images/icons.svg#icon-facebook">
+                                                </use>
+                                            </svg>
+                                            <!-- Facebook -->
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.linkedin.com/" class="social-link" aria-label="Linkedin">
+                                            <svg class="social-link-icon" width="20" height="20">
+                                                <use href="./images/icons.svg#icon-linkedin">
+                                                </use>
+                                            </svg>
+                                            <!-- Linkedin -->
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                         <li class="team-list-item">
@@ -230,36 +254,44 @@
                             <div class="card-container">
                                 <h3 class="team-list-title">Михаил Ермаков</h3>
                                 <p class="team-list-description">UI Designer</p>
-                            </div>
-                            <div class="team-thumb">
-                                <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram">
-                                    <svg class="social-link-icon" width="20" height="20">
-                                        <use href="./images/icons.svg#icon-instagram">
-                                        </use>
-                                    </svg>
-                                    <!-- Instagram -->
-                                </a>
-                                <a href="https://www.twitter.com/" class="social-link" aria-label="Twitter">
-                                    <svg class="social-link-icon" width="20" height="20">
-                                        <use href="./images/icons.svg#icon-twitter">
-                                        </use>
-                                    </svg>
-                                    <!-- Twitter -->
-                                </a>
-                                <a href="https://www.facebook.com/" class="social-link" aria-label="Facebook">
-                                    <svg class="social-link-icon" width="20" height="20">
-                                        <use href="./images/icons.svg#icon-facebook">
-                                        </use>
-                                    </svg>
-                                    <!-- Facebook -->
-                                </a>
-                                <a href="https://www.linkedin.com/" class="social-link" aria-label="Linkedin">
-                                    <svg class="social-link-icon" width="20" height="20">
-                                        <use href="./images/icons.svg#icon-linkedin">
-                                        </use>
-                                    </svg>
-                                    <!-- Linkedin -->
-                                </a>
+                                <ul class="team-social-list">
+                                    <li>
+                                        <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram">
+                                            <svg class="social-link-icon" width="20" height="20">
+                                                <use href="./images/icons.svg#icon-instagram">
+                                                </use>
+                                            </svg>
+                                            <!-- Instagram -->
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.twitter.com/" class="social-link" aria-label="Twitter">
+                                            <svg class="social-link-icon" width="20" height="20">
+                                                <use href="./images/icons.svg#icon-twitter">
+                                                </use>
+                                            </svg>
+                                            <!-- Twitter -->
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.facebook.com/" class="social-link" aria-label="Facebook">
+                                            <svg class="social-link-icon" width="20" height="20">
+                                                <use href="./images/icons.svg#icon-facebook">
+                                                </use>
+                                            </svg>
+                                            <!-- Facebook -->
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.linkedin.com/" class="social-link" aria-label="Linkedin">
+                                            <svg class="social-link-icon" width="20" height="20">
+                                                <use href="./images/icons.svg#icon-linkedin">
+                                                </use>
+                                            </svg>
+                                            <!-- Linkedin -->
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </li>
                     </ul>
